--- a/doctorservice/app.json
+++ b/doctorservice/app.json
@@ -28,7 +28,7 @@
         "expo-build-properties",
         {
           "ios":{
-            
+           "supportsTablet":true 
           }
 
         },
